# PSP2BootimageMaker

./: README.md  build.sh
bootimage/: CMakeLists.txt  build.sh  exports.yml
bootimage/modules/: CMakeLists.txt  linker.x
bootimage/modules/test_plugin/: CMakeLists.txt  exports.yml  linker.x
bootimage/modules/test_plugin/src/: main.c
bootimage/modules/test_plugin2/: CMakeLists.txt  exports.yml
bootimage/modules/test_plugin2/src/: main.c
bootimage/src/: main.c
bootimage_loader/: CMakeLists.txt  build.sh  exports.yml
bootimage_loader/src/: main.c
